2003-09-04  Jeffrey Stedfast  <fejj@ximian.com>

	* em-folder-browser.c (emfb_folder_expunge): Confirm hat the user
	wants to expunge.
	(emfb_empty_trash): Implemented.

	* em-utils.c (em_utils_prompt_user): Make public (used to be
	e_question).
	(em_utils_confirm_expunge): New function to confirm that the user
	wants to expunge.
	(em_utils_empty_trash): New function to empty all Trash folders.

	* em-composer-utils.c: Get rid of e_question and use em-utils'
	em_utils_prompt_user() function instead.

	* em-format-html-quote.[c,h]: New formatter for quoting
	replies/forwards/etc.

	* em-utils.c (em_utils_quote_message): New function.
	(composer_set_body): Use the new em_utils_quote_message()
	function.
	(em_utils_temp_save_part): Only g_free mfilename if it was
	malloc'd.

	* mail-tools.c (mail_tool_quote_message): Removed.
	(mail_tool_forward_message): Removed.

2003-09-03  Jeffrey Stedfast  <fejj@ximian.com>

	* em-format.c (em_format_class_remove_handler): New function to
	remove a mime-type handler from a class.

	* em-format-html.c (efh_init): Set the CITATION bit for the
	default html flags.

	* em-format-html-display.c: Fixed some compiler warnings by adding
	appropriate includes.
	(efhd_multipart_signed): Don't write "inlined signature...".

2003-09-03  Not Zed  <NotZed@Ximian.com>

	* em-icon-stream.[ch]: New subclass of emsyncstream, write camel
	stream one side, creates an icon on the other.

	* em-sync-stream.[ch]: New file, an abstract class for creating
	write-any-thread-act-gui-thread stuff.  'em-camel-stream' will
	subclass this.

	* em-format-html-display.c (efhd_attachment_button): setup a job
	to write out an icon if the type is an image type, otherwise try
	and get the icon directly.  no caching yet.  the system icons
	aren't scaled properly either.
	(efhd_write_icon_job): async job to write out image content.

2003-09-02  Not Zed  <NotZed@Ximian.com>

	* em-format-html.c (emfh_new_job): renamed to
	em_format_html_job_new and made public.